More color contrast corrections.

--- a/docroot/sites/all/themes/ilr_theme/scss/base/_variables.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/base/_variables.scss
@@ -83,7 +83,7 @@ $color-course-class-bg: lighten($warm-grey, 15%);
 $color-card-bg--light: $warm-grey;
 $color-link: $black;
 $color-social-bg: $pink-red;
-$color-venue-bg: $pink-red;
+$color-venue-bg: #ca1621;
 $color-video-dark-blue: #002A48;
 $color-table-link-focus: #d82d1a;
 
