--- a/docroot/sites/all/themes/ilr_theme/scss/components/_subsite_header.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/components/_subsite_header.scss
@@ -96,6 +96,10 @@
           span {
             color: $black;
           }
+
+          &--ilr-at-70 {
+            color: white;
+          }
         }
 
         .subsite__subheading {
